[project]
name = "comfy-intelliprompt"
version = "1.0.0"
description = "intelliPrompt - An intelligent prompt optimizer for ComfyUI that fixes typos, balances parentheses, and enhances prompts"
authors = [
    {name = "galpt", email = "https://github.com/galpt"}
]
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/galpt/comfy-intelliPrompt"
Repository = "https://github.com/galpt/comfy-intelliPrompt"
Issues = "https://github.com/galpt/comfy-intelliPrompt/issues"

[tool.comfy]
PublisherId = "intelliprompt"
NodeVersion = "1.0.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
